Ensure lines wrap to avoid bogus scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
 	font-size: 16px;
 	max-width: 700px;
 	margin: 0 auto;
+	word-wrap: break-word;
 }
 
 .post p img {
